src/test/ui/consts/const-size_of-cycle.stderr
error[E0391]: cycle detected when const-evaluating + checking `Foo::bytes::{{constant}}#0`
  --> $DIR/const-size_of-cycle.rs:6:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating `Foo::bytes::{{constant}}#0`...
  --> $SRC_DIR/libcore/mem/mod.rs:LL:COL
   |
LL |     intrinsics::size_of::<T>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which requires computing layout of `Foo`...
   = note: ...which requires normalizing `ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: All, def_id: None }, value: [u8; _] }`...
note: ...which requires const-evaluating + checking `Foo::bytes::{{constant}}#0`...
  --> $DIR/const-size_of-cycle.rs:6:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires const-evaluating + checking `Foo::bytes::{{constant}}#0`, completing the cycle
note: cycle used when processing `Foo`
  --> $DIR/const-size_of-cycle.rs:5:1
   |
LL | struct Foo {
   | ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
